tarjome2/src/index.css
html,
#root {
  min-height: 100% !important;
  height: 100%;
}
body {
  /* font: 14px "Century Gothic", Futura, sans-serif; */

  margin: 0;
  direction: rtl;
  min-height: 100% !important;
  height: 100%;

  overflow-x: hidden;
}

.toolbar {
  position: fixed;
  width: 100%;
  /* background-image: url('./assets/images/pur.jpg');
  background-color: rgb(90, 4, 79); */
  background: url("./assets/images/asfalt-light.png") repeat rgb(90, 4, 79);
  /* background-size: initial; */
  top: 0;
  right: 0;
  height: 100px;
  z-index: 99;
}

.transparent-toolbar {
  background-color: transparent;
  position: fixed;
  width: 100%;
  top: 0;
  right: 0;
  height: 100px;
  z-index: 99;
}
.main-content {
  margin-top: 100px;
  padding: 20px 0;
}
.toolbar_navigation {
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 1rem;
  /* float: right; */
}

.toolbar_logo a {
  color: #ffffff;
  text-decoration: none;
}
.toolbar_logo {
  margin: 0 1rem;
}

.toolbar_navigation_items a {
  color: #ffffff;
  text-decoration: none;
}

.toolbar_navigation_items a:hover,
.toolbar_navigation_items a:active,
.toolbar_logo a:hover,
.toolbar_logo a:active,
.side-drawer a:hover,
.side-drawer a:active {
  /* color: rgb(123, 117, 160); */
  color: #cc3399;
}

.toolbar_navigation_items ul {
  display: flex;
  margin: 0;
  padding: 0;
  list-style: none;
}

.toolbar_navigation_items li {
  padding: 0 0.5rem;
}

.spacer {
  flex: 1;
}
.toggle-btn {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 28px;
  width: 26px;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  box-sizing: border-box;
}

.toggle-btn:focus {
  outline: none;
}

.toggle-btn-line {
  width: 25px;
  height: 2px;
  background-color: #ffffff;
}

.side-drawer {
  height: 100%;
  /* background-color: rgb(90, 4, 79); */
  background: url("./assets/images/asfalt-light.png") repeat rgb(90, 4, 79);
  /* subtle-grunge */
  position: fixed;
  box-shadow: -1px 0px 7px rgba(0, 0, 0, 0.5);
  top: 0;
  /* right: 0; */
  left: 0;
  width: 45%;
  text-align: right;
  z-index: 200;
  transform: translateX(240%);
  transition: transform 0.3s ease-out;
}

.side-drawer.open {
  transform: translateX(125%);
}

.sidedrawer-content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;

}
.sidedrawer-content ul {
  margin-right: 20px;
}
.icon-in-sidebar {
  /* position: absolute; */
  width: 50%;
  height: 35%;
  color: #ffffff;
  margin: 1% auto;
  /* margin : auto; */
  /* top : 3%; */
  /* right: 25%; */
}
.side-drawer ul {
  /* position: absolute; */
  height: 100%;
  list-style: none;
  display: flex;
  flex-direction: column;

  /* margin-top: 50%; */
  /* justify-content: center; */
}
.side-drawer li {
  margin-top: 1rem;
}
.side-drawer a {
  color: #ffffff;
  text-decoration: none;
}

.backdrop {
  height: 100%;
  width: 100%;
  position: fixed;
  background: rgba(0, 0, 0, 0.3);
  z-index: 100;
  top: 0;
}
.gray-body {
  background-color: #f7f2f2;
  height: 100%;
  width: 100%;
}
.resume-gray-body {
  background-color: #f7f2f2;
  min-height: 500px;
  width: 100%;
}
.signup-container {
  height: auto;
  max-width: 50%;
  text-align: center;
  display: flex;
  flex-direction: column;
  margin: auto;
  background-color: #ffffff;
  padding: 3%;
  direction: rtl;
}
.account-title {
  text-align: right;
}

.radio-button,
.radio-button:hover,
.radio-button:active,
.radio-button:focus,
.radio-button:active:focus,
.btn-primary,
.btn-primary:active:focus,
.choose-role-btns .btn {
  background-color: #212f3d;
  border: none;
  outline: none;
  border-color: #212f3d;
  box-shadow: none;
}

.btn-primary:hover,
.btn-primary:active,
.btn-primary:focus,
.btn-primary:active:focus,
.active,
.active:hover,
.active:active,
.active:focus,
.active:active:focus,
.choose-role-btns .btn:hover,
.choose-role-btns .btn:active,
.choose-role-btns .btn:focus,
.choose-role-btns .btn:active:focus,
.btn-primary:not(:disabled):not(.disabled).active,
.btn-primary:disabled {
  background-color: rgb(90, 4, 79);
  border: none;
  outline: none;
  border-color: rgb(90, 4, 79);
  box-shadow: none;
}

.margin-top {
  margin-top: 20px;
}
.extra-margin-top {
  margin-top: 100px;
}
.margin-right {
  margin-right: 20px;
}
.margin-left {
  margin-right: 20px;
}
.margin-bottom {
  margin-bottom: 20px;
}
.right-aligned {
  text-align: right;
}

.center-aligned {
  text-align: center;
}

.error-msg {
  color: red;
}

.alert-container {
  position: absolute;
  width: 100%;
}

.alert-card {
  padding: 3rem;
  font-size: large;
}

.checkbox-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}
.checkbox-container label {
  margin: 0 15px;
}
.color-behind-profile {
  /* background-color: rgb(204, 51, 153);  */
  /* background-color: #A641B9; */
  background: linear-gradient(60deg, #cc3399, #5a044f);
  width: 100%;
  height: 40%;
  /* z-index: -200; */
}
.profile-card {
  margin: auto;
  max-width: 90%;
  /* z-index: -100; */
  text-align: right;
  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.5);
}
/* .list-item-container:hover{
  background-color: thistle;
} */

.list-item-container {
  transform: translateY(0);
  animation: change 0.49s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

@keyframes change {
  0% {
    transform: translateY(100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

/* .explanation-card {
  transform: translateX(0);
  animation: explanation-card-change 0.79s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

@keyframes explanation-card-change {
  0% {
    transform: translateX(100%);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
} */

.emty-text {
  color: rgb(204, 51, 153);
  /* color: rgb(236, 213, 236); */
  margin: 40px auto;
  max-width: 90%;
  text-align: center;
  font-weight: bold;
}
.translator-list-item-card {
  /* border: none; */
  text-align: right;
}
/* ... */

